Anonymous | Login | 2021-01-23 14:03 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0032004 | Community | [OCCT] OCCT:Foundation Classes | public | 2020-12-17 11:12 | 2020-12-26 14:53 | ||||||||
Reporter | kgv | ||||||||||||
Assigned To | bugmaster | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | verified | Resolution | fixed | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 5.2.2 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0032004: Foundation Classes, UnitsAPI - misprint in "ACCOUSTIC INTENSITY" unit name | ||||||||||||
Description | UnitsAPI has a misprint in "ACCOUSTIC INTENSITY" unit name. | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | Not required | ||||||||||||
Attached Files | |||||||||||||
![]() |
|
(0097660) git (administrator) 2020-12-17 11:14 |
Branch CR32004 has been created by kgv. SHA-1: d0a6ded43b87bd6c6b0db27cc3deefcfa5d78bf8 Detailed log of new commits: Author: luz paz Date: Thu Dec 10 11:40:53 2020 +0300 0032004: Foundation Classes, UnitsAPI - misprint in "ACCOUSTIC INTENSITY" unit name Found using `codespell 2.1.dev0` |
(0097731) abv (manager) 2020-12-18 21:59 |
No remarks, please integrate |
(0097908) bugmaster (administrator) 2020-12-26 12:14 |
Combination - OCCT branch : WEEK-52 master SHA - 41046145c4a15f5cedf5f3c5877952ee00d568b4 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : WEEK-52 SHA - 290e5c74e8fef71947cadf90acb8e43c81ed10a1 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17722.770000000193 / 17710.950000000055 [+0.07%] Products Total CPU difference: 12416.490000000109 / 12412.520000000126 [+0.03%] Windows-64-VC14: OCCT Total CPU difference: 19321.5625 / 19274.6875 [+0.24%] Products Total CPU difference: 13844.421875 / 13853.046875 [-0.06%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0097948) git (administrator) 2020-12-26 14:53 |
Branch CR32004 has been deleted by inv. SHA-1: d0a6ded43b87bd6c6b0db27cc3deefcfa5d78bf8 |
![]() |
|||
occt: master 3273937d
Timestamp: 2020-12-10 08:40:53 Author: luz paz Committer: bugmaster [ Details ] [ Diff ] |
0032004: Foundation Classes, UnitsAPI - misprint in "ACCOUSTIC INTENSITY" unit name Found using `codespell 2.1.dev0` |
||
mod - src/UnitsAPI/Units.dat | [ Diff ] [ File ] | ||
mod - src/UnitsAPI/UnitsAPI.cxx | [ Diff ] [ File ] | ||
mod - src/UnitsAPI/UnitsAPI_Units_dat.pxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-12-17 11:12 | kgv | New Issue | |
2020-12-17 11:12 | kgv | Assigned To | => abv |
2020-12-17 11:14 | git | Note Added: 0097660 | |
2020-12-17 11:14 | kgv | Relationship added | child of 0031939 |
2020-12-17 11:15 | kgv | Status | new => resolved |
2020-12-17 11:15 | kgv | Product Version | 7.5.0 => 5.2.2 |
2020-12-18 21:59 | abv | Note Added: 0097731 | |
2020-12-18 21:59 | abv | Assigned To | abv => bugmaster |
2020-12-18 21:59 | abv | Status | resolved => reviewed |
2020-12-26 12:14 | bugmaster | Note Added: 0097908 | |
2020-12-26 12:14 | bugmaster | Status | reviewed => tested |
2020-12-26 12:16 | bugmaster | Test case number | => Not required |
2020-12-26 14:40 | bugmaster | Changeset attached | => occt master 3273937d |
2020-12-26 14:40 | bugmaster | Status | tested => verified |
2020-12-26 14:40 | bugmaster | Resolution | open => fixed |
2020-12-26 14:53 | git | Note Added: 0097948 |
Copyright © 2000 - 2021 MantisBT Team |