0032004: Foundation Classes, UnitsAPI - misprint in "ACCOUSTIC INTENSITY" unit name

Found using `codespell 2.1.dev0`